underscore was coming from a line break in the html, fixed by removing text-decoration from a tags

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -30,6 +30,7 @@ h3 {
 
 a {
     color: #357b70;
+    text-decoration: none;
 }
 
 a:visited {
